Added Community and Chance decks
- Created strings data file and lookup functions
- Added card effects
- Added handling for the rest of the special spaces

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,4 @@ project ("Monopoly")
 add_subdirectory ("src")
 add_subdirectory ("test")
 enable_testing ()
-add_test (NAME TestProperty COMMAND Test_Monopoly)
+add_test (NAME TestAll COMMAND Test_Monopoly)
