--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "src/lib/json"]
 	path = src/lib/json
 	url = https://github.com/nlohmann/json.git
+[submodule "test/lib/Catch2"]
+	path = test/lib/Catch2
+	url = https://github.com/catchorg/Catch2.git
+
