--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,7 @@ add_subdirectory (lib/json)
 
 # Add source to this project's library.
 file (GLOB SOURCES *.cpp)
-add_library (MonopolyEngine ${SOURCES} "GameState.h" "GameState.cpp" "Input.h"  "Cards.cpp" "Strings.h" "Strings.cpp")
+add_library (MonopolyEngine ${SOURCES})
 include_directories (MonopolyEngine "lib/json/include")
 target_link_libraries (MonopolyEngine PRIVATE nlohmann_json::nlohmann_json)
 
@@ -19,9 +19,6 @@ find_package(Threads REQUIRED)
 target_link_libraries(MonopolyEngine PRIVATE Threads::Threads)
 
 # Add source to this project's executable.
-add_executable (Monopoly app/main.cpp "GameState.h" "GameState.cpp" "Input.h"  "Cards.cpp" "Strings.h" "Strings.cpp")
-include_directories (Monopoly ".")
-target_link_libraries (Monopoly MonopolyEngine)
 file (GLOB HEADERS *.h)
 set_target_properties (MonopolyEngine PROPERTIES PUBLIC_HEADER "${HEADERS}")
 install (
@@ -31,10 +28,11 @@ install (
 )
 
 set(DATA_INSTALL_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/share/")
-#set(DATA_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}/share")
 
 add_compile_definitions(
 	DATA_INSTALL_PREFIX="${DATA_INSTALL_PREFIX}"
 )
 install (FILES strings.json DESTINATION ${DATA_INSTALL_PREFIX})
+
+add_subdirectory (app/cli)
 
