--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,10 @@ add_library (MonopolyEngine ${SOURCES})
 include_directories (MonopolyEngine "lib/json/include")
 target_link_libraries (MonopolyEngine PRIVATE nlohmann_json::nlohmann_json)
 
+set(CMAKE_THREAD_LIBS_INIT "-lpthread")
+set(CMAKE_HAVE_THREADS_LIBRARY 1)
+set(CMAKE_USE_WIN32_THREADS_INIT 0)
+set(CMAKE_USE_PTHREADS_INIT 1)
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 target_link_libraries(MonopolyEngine PRIVATE Threads::Threads)
