Add JS module with some C++ bindings

--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -38,7 +38,7 @@
       "buildRoot": "${projectDir}\\out\\build\\${name}",
       "installRoot": "${projectDir}\\out\\install\\${name}",
       "cmakeToolchain": "E:\\Code\\emsdk\\upstream\\emscripten\\cmake\\Modules\\Platform\\Emscripten.cmake",
-      "cmakeCommandArgs": "-DCMAKE_CXX_FLAGS:STRING=\"-fexceptions --embed-file=${projectDir}\\src\\share\\strings.json@share\\strings.json\""
+      "cmakeCommandArgs": "-DCMAKE_CXX_FLAGS:STRING=\"-fexceptions --bind --embed-file=${projectDir}\\src\\share\\strings.json@share\\strings.json\""
     }
   ]
 }
