--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -32,7 +32,14 @@ if (${CMAKE_SYSTEM_NAME} STREQUAL "Emscripten")
     # Allow empscripten to preload the JSON display strings
     message ("Emscripten target system detected; setting data path to point virtual file system")
     set(DATA_INSTALL_PREFIX ${DATA_DIR})
-    #em++ flag --embed-file set globally in CMakeSettings.json so it applies to all .js files
+    # em++ flag --embed-file set globally in CMakeSettings.json so it applies to all .js files
+	# Custom target to generate a JS module with C++ bindings
+	add_custom_target(MonopolyJSEngine
+		ALL BYPRODUCTS monopoly.js
+		COMMENT "Generating JS/C++ bindings: monopoly.js"
+		COMMAND ${CMAKE_CXX_COMPILER} --bind -o monopoly.js -Wl,--whole-archive libMonopolyEngine.a -Wl,--no-whole-archive
+		DEPENDS libMonopolyEngine.a
+	)
 else ()
     set(DATA_INSTALL_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/${DATA_DIR}")
     message ("Setting install path for data files to " ${DATA_INSTALL_PREFIX})
@@ -45,4 +52,3 @@ add_compile_definitions(
 )
 
 add_subdirectory (app/cli)
-
