--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,15 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
-set(CMAKE_CXX_STANDARD 17)
-
 project ("Monopoly")
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_VERBOSE_MAKEFILE on)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build.emscripten)
+
+if (${CMAKE_SYSTEM_NAME} STREQUAL "Emscripten")
+	set (BUILD_WEB_SERVER True)
+endif ()
 
 find_package(Git QUIET)
 if(GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
