--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -42,7 +42,7 @@ if (BUILD_WEB_SERVER)
     add_custom_command (TARGET MonopolyJSEngine POST_BUILD COMMENT "Installing monopoly.js to web server directory " COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/monopoly.js ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/.)
     add_custom_command (TARGET MonopolyJSEngine POST_BUILD COMMENT "Installing monopoly.wasm to web server directory " COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/monopoly.wasm ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/.)
 else ()
-    set(DATA_INSTALL_PREFIX "${CMAKE_INSTALL_PREFIX}/${DATA_DIR}")
+    set(DATA_INSTALL_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/${DATA_DIR}")
     message ("Setting install path for data files to " ${DATA_INSTALL_PREFIX})
     install (FILES ${DATA_DIR}/strings.json DESTINATION ${DATA_INSTALL_PREFIX})
 endif ()
